k8s/prod/prisma-primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-prisma-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma-primary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
       labels:
          app: prisma-primary
    spec:
      containers:
        - name: prisma-primary
          image: prismagraphql/prisma-prod:1.19.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 750Mi
          ports:
            - containerPort: 5000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
            "-credential_file=/secrets/cloudsql/credentials.json"]
          args: ["$(SQL_INSTANCE)"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
