k8s/prod/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    name: server
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
