k8s/prod/prisma-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prisma-ingress-service
  annotations:
    ingress.kubernetes.io/secure-backends: 'true'
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - <DOMAIN>
      secretName: <DOMAIN_SECRET_NAME>
  rules:
    - host: <DOMAIN>
      http:
        paths:
          - path: /management
            backend:
              serviceName: prisma-primary-service
              servicePort: 5000
          - path: /
            backend:
              serviceName: prisma-secondary-service
              servicePort: 5000
